outputs/workspace_output_1771851573_4428.txt
error[E0308]: mismatched types
   --> crypto/pqc.rs:162:13
    |
162 |         let (classical_pair, _) = super::keys::EphemeralKeyPair::new();
    |             ^^^^^^^^^^^^^^^^^^^   ------------------------------------ this expression has type `std::result::Result<EphemeralKeyPair, VantisError>`
    |             |
    |             expected `Result<EphemeralKeyPair, VantisError>`, found `(_, _)`
    |
    = note: expected enum `std::result::Result<EphemeralKeyPair, VantisError>`
              found tuple `(_, _)`

